--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -122,15 +122,15 @@ jobs:
           echo "Paru installation and configuration complete."
           echo "::endgroup::"
 
-          #cd ..
-          #sudo pacman -S --noconfirm wget
-          #wget https://github.com/envolution/aur/releases/download/folly/folly-2025.07.07.00-1-x86_64.pkg.tar.zst
+          cd ..
+          sudo pacman -S --noconfirm wget
+          wget https://github.com/envolution/aur/releases/download/folly/folly-2025.07.14.00-1-x86_64.pkg.tar.zst
           #wget https://github.com/envolution/aur/releases/download/fizz/fizz-2025.07.07.00-1-x86_64.pkg.tar.zst
           #wget https://github.com/envolution/aur/releases/download/wangle/wangle-2025.07.07.00-1-x86_64.pkg.tar.zst
           #wget https://github.com/envolution/aur/releases/download/fbthrift/fbthrift-2025.07.07.00-1-x86_64.pkg.tar.zst
           #wget https://github.com/envolution/aur/releases/download/fb303/fb303-2025.07.07.00-1-x86_64.pkg.tar.zst
           #wget https://github.com/envolution/aur/releases/download/edencommon/edencommon-2025.07.07.00-1-x86_64.pkg.tar.zst
-          #sudo pacman -U --noconfirm *zst && rm -f *zst
+          sudo pacman -U --noconfirm *zst && rm -f *zst
 
       - name: Setup SSH key for AUR
         run: |
