--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -126,7 +126,7 @@ jobs:
           sudo pacman -S --noconfirm wget
           wget https://github.com/envolution/aur/releases/download/folly/folly-2025.07.14.00-1-x86_64.pkg.tar.zst
           wget https://github.com/envolution/aur/releases/download/fizz/fizz-2025.07.14.00-1-x86_64.pkg.tar.zst
-          #wget https://github.com/envolution/aur/releases/download/wangle/wangle-2025.07.07.00-1-x86_64.pkg.tar.zst
+          wget https://github.com/envolution/aur/releases/download/wangle/wangle-2025.07.14.00-1-x86_64.pkg.tar.zst
           #wget https://github.com/envolution/aur/releases/download/fbthrift/fbthrift-2025.07.07.00-1-x86_64.pkg.tar.zst
           #wget https://github.com/envolution/aur/releases/download/fb303/fb303-2025.07.07.00-1-x86_64.pkg.tar.zst
           #wget https://github.com/envolution/aur/releases/download/edencommon/edencommon-2025.07.07.00-1-x86_64.pkg.tar.zst
